fix/scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,7 +77,6 @@
 
 * {
   -webkit-tap-highlight-color: transparent;
-  overflow-y: scroll;
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none;
 }
